# pybind11_dwdatareader_example

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  DWDataReaderExample.c  DWLoadLib.c  example.cpp  pyproject.toml  vcpkg.json
src/pybind11example/: DWLoadLib.h  example.cpp
